# Ragnoria

./: .env.example  .gitignore  Cargo.toml  FINDINGS.md  PROGRESS.md  QUICK-REF.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  analyze_0x0000.py  compare_packets.py  decrypt_pcap.py  launch-gui.sh  ro2_debug_breakpoints.txt  test_values.sh
.opencode/: AGENTS.md
crates/launcher/: Cargo.toml  README.md
crates/launcher/src/: config.rs  main.rs
crates/packet-analyzer/: Cargo.toml
crates/packet-analyzer/src/: main.rs
crates/ro2-common/: Cargo.toml
crates/ro2-common/src/: lib.rs
crates/ro2-common/src/crypto/: mod.rs  proudnet.rs
crates/ro2-common/src/database/: mod.rs  queries.rs
crates/ro2-common/src/packet/: framing.rs  mod.rs  parser.rs
crates/ro2-common/src/protocol/: dispatcher.rs  handler.rs  mod.rs  proudnet.rs  rmi.rs
crates/ro2-lobby/: Cargo.toml
crates/ro2-lobby/src/: main.rs
crates/ro2-lobby/src/handlers/: mod.rs
crates/ro2-login/: Cargo.toml
crates/ro2-login/src/: main.rs
crates/ro2-login/src/handlers/: mod.rs
crates/ro2-patcher/: Cargo.toml  FINDING_PATCHES.md  PATCHES.md
crates/ro2-patcher/src/: main.rs
crates/ro2-world/: Cargo.toml
crates/ro2-world/src/: lib.rs  main.rs
crates/ro2-world/src/handlers/: mod.rs  system.rs
docs/: CAPTURE-GUIDE.md  LAUNCHER-TESTING-GUIDE.md  LOGIN_SERVER_STATUS.md  RUST-2024-MIGRATION.md  SESSION-SUMMARY-2026-01-28.md  SESSION-SUMMARY-2026-01-31.md  analyze_capture.md  capture_and_decrypt.md  capture_official_server.sh  ghidra-findings.md
docs/captures/: EXAMPLE-ANALYSIS.md  README.md
docs/ghidra-findings/: FUNCTION-RENAMING-PROGRESS.md  GAME-LOOP-ANALYSIS.md  LOGIN-FLOW-ANALYSIS.md  VALIDATE-LAUNCH-PARAMS-ANALYSIS.md  WINMAIN-ANALYSIS.md
docs/ghidra_analysis/: README.md  function_analysis.md  opcode_reference.md
docs/implementation/: HANDLER-IMPLEMENTATION-PROGRESS.md
docs/protocol/: PACKET-CAPTURE-ANALYSIS.md  RFC-RO2-PROTOCOL.md
docs/protocol/appendices/: message-catalog.md
docs/testing/: TEST-SERVER-GUIDE.md
migrations/: 001_initial_schema.sql  001_initial_schema_mysql.sql  README.md
scripts/: debug_client.sh  find_pe_offset.py
tools/: decrypt_packet.py  quick_capture.sh
