[workspace]
members = [
    "crates/ro2-common",
    "crates/ro2-login",
    "crates/ro2-lobby",
    "crates/ro2-world",
    "crates/packet-analyzer", "crates/launcher", "crates/ro2-patcher",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/yourusername/ragnoria"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization (postcard replaces unmaintained bincode)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# Networking & byte manipulation
bytes = "1.9"
hex = "0.4"

# Cryptography
aes = "0.8"
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"
bcrypt = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration (dotenvy is maintained fork of dotenv)
config = "0.15"
dotenvy = "0.15"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
