[package]
name = "packet-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ro2-common = { path = "../ro2-common" }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
anyhow = { workspace = true }
tokio = { workspace = true }
local-ip-address = "0.6"
